# ATDN_vSLAM

./: .gitignore  GMA-1.0.0-py3-none-any.whl  README.md  evaluate_odometry.py  gma_parameters.py  helpers.py  kalman.py  localization_test.ipynb  odometry_test.ipynb  preprocessed_flow_test.ipynb  pyproject.toml  requirements.txt  semantic_depth_checking.ipynb  setup.cfg  slam_test.ipynb  test_odometry.ipynb  test_slam.ipynb  test_slam.py  train_depth.py  train_flow_vo.py  train_localization.py  train_ododmetry.py  train_odometry.py  train_precomputed.py  train_standardization.py  train_tvo.py  tutorial.md
atdn_vslam/: evaluate_odometry.py  train_odometry.py  train_tvo.py
atdn_vslam/depth/: depth_dataset.py  depth_loss.py  depth_predictor.py  network.py
atdn_vslam/eval/: GT.txt  kalman.py  visualizer.py
atdn_vslam/layers/: conv.py  linear.py
atdn_vslam/localization/: datasets.py  edl.py  losses.py  network.py
atdn_vslam/odometry/: datasets.py  loss.py  network.py  tvo.py
atdn_vslam/slam_framework/: frame.py  neural_slam.py
atdn_vslam/utils/: arguments.py  depth.py  gma_parameters.py  helpers.py  normalizations.py
checkpoints/: normalization.pth
depth/: depth_dataset.py  depth_loss.py  depth_predictor.py
eval/: visualizer.py
general_layers/: conv.py  vit.py
layers/: conv.py  experimental.py  linear.py  vit.py
localization/: code_embedding_loss.py  datasets.py  embedded_localizer.py  localization.py  localization_dataset.py  localization_test.ipynb  network.py
normalization_cache/: flow_std.pth  normalization.py
odometry/: README.md  clvo.py  datasets.py  lightvo.py  loss.py  lsc_vo.py  network.py  rspvo.py  spatialvo.py  symvo.py  tvo.py  visualizer.py  vo_dataloader.py  vo_datasets.py  vo_loss.py
odometry_visualization/: ATDN_prediction.txt  visualizer.md  visualizer.py
slam_framework/: frame.py  neural_slam.py
tests/: test_localization.ipynb
utils/: arguments.py  depth.py  flow_mean.pth  generate_flow.py  helpers.py  normalization.py  rgb_mean.pth  rgb_std.pth  transforms.py  tutorial.md
utils/tests/: test_localization.ipynb
