[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["atdn_vslam", "GMA"]

[project]
name = "atdn_vslam"
description = "An All-Through Deep Learning-Based Solution for Visual Simultaneous Localization and Mapping "
readme = "README.md"
requires-python = ">=3.6"
version = "0.2.1"
dependencies = [
            "torch",
            "torchvision",
            "PyYAML",
            "matplotlib",
            "einops",
            "tensorboard",
            "evo",
            "tqdm",
]
authors = [
  { name="György Richárd Bogár", email="gyrbogar@iit.bme.hu" },
  { name="Mátyás Szántó", email="mszanto@iit.bme.hu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/MILAB-IIT-CV/ATDN_vSLAM"